crates/mako/src/transformers/snapshots/mako__transformers__transform_dep_replacer__tests__dynamic_import_from_replace.snap
---
source: crates/mako/src/transformers/transform_dep_replacer.rs
expression: "transform_code(\"const x = import('x')\")"
---
const x = import("/x/index.js");
