crates/mako/src/transformers/snapshots/mako__transformers__transform_dep_replacer__tests__import_replace.snap
---
source: crates/mako/src/transformers/transform_dep_replacer.rs
expression: "transform_code(\"import x from 'x'\")"
---
import x from "/x/index.js";
