crates/mako/src/transformers/snapshots/mako__transformers__transform_dep_replacer__tests__simple_replace.snap
---
source: crates/mako/src/transformers/transform_dep_replacer.rs
expression: "transform_ast_with(&mut ast.ast, &mut visitor, &context.meta.script.cm)"
---
require("/root/node_modules/react/index.js");
